# aeroprofile

./: .dockerignore  .gitignore  AEROPROFILE_SPEC.md  Dockerfile  LICENSE  README.md  STRAVA-INTEGRATION-PLAN.md  pyproject.toml  render.yaml  requirements.txt  run_local.bat  run_local.sh
.github/workflows/: ci.yml  deploy.yml
aeroprofile/: __init__.py  bike_types.py  cli.py  pipeline.py  power_meter_quality.py
aeroprofile/anomaly/: __init__.py  calibration_check.py
aeroprofile/api/: __init__.py  app.py  intervals_routes.py  preprocess_cache.py  routes.py  schemas.py
aeroprofile/filters/: __init__.py  segment_filter.py
aeroprofile/intervals/: __init__.py  client.py
aeroprofile/parsers/: __init__.py  auto_parser.py  fit_parser.py  gpx_parser.py  models.py  tcx_parser.py
aeroprofile/physics/: __init__.py  air_density.py  constants.py  power_model.py  wind.py
aeroprofile/solver/: __init__.py  chung_ve.py  hierarchical.py  optimizer.py  virtual_elevation.py  wind_inverse.py
aeroprofile/weather/: __init__.py  cache.py  interpolation.py  open_meteo.py  (+1 more)
deploy/: README.md  claude-vps-overload-fallback.md  deploy-aeroprofile.sh  docker-compose.reference.yml  overload-fallback.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/: compare_runs.py  debug_single_ride.py  feature_test.py  rename_fits.py  strip_bg.py  test_prior_adaptive.py  test_prior_robustness.py
tests/: test_filters.py  test_hierarchical.py  test_manual_wind_override.py  test_parsers.py  test_physics.py  test_solver.py  test_weather.py  test_wind_inverse.py
(+139 files in other folders)
